fix(jobCard): Fix layout issue on IE (#338)

--- a/react/JobCard/JobCard.less
+++ b/react/JobCard/JobCard.less
@@ -51,6 +51,7 @@
     flex-grow: 1;
     padding: @grid-base*3 @grid-base*4 (@grid-base*4 - @job-card-section-bottom-space) @grid-base*4;
     position: relative;
+    flex-basis: 100%;
   }
   .rightContainer {
     .flexCol();
